--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -5,7 +5,7 @@
     --secondary-light-color: #37396D;
     --secondary-dark-color: #585858;
     --acent-color: #29D7CC;
-    --acent-dark-color: #26bbb1;
+    --acent-hover-color: #ff74d8;
     --white: #fff;
     --dialog-color: #B4B4B4;
 
