--- a/scss/_pagination.scss
+++ b/scss/_pagination.scss
@@ -2,6 +2,7 @@
 
 
 .swiper-pagination {
+    display: none;
     width: 3%;
     left: 3%;
     //Pagination de swiper , solo se puede modificar de esta manera 
