--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -22,6 +22,7 @@
         flex-direction: column;
         gap: 0.3em;
         z-index: 4;
+        
 
         label {
             display: flex;
@@ -31,25 +32,25 @@
 
         input::placeholder,
         textarea::placeholder {
-            font-size: calc(0.9em + 0.2vw);
+            font-size: calc(0.8em + 0.2vw);
             font-family: conf.fontFamily(khmer);
             color: rgb(150, 150, 150);
         }
 
         input.subject {
             width: 100%;
-            height: 5vh;
+            height: 4vh;
 
         }
 
         input.email {
             width: 100%;
-            height: 5vh;
+            height: 4vh;
         }
 
         input.name {
             width: 45%;
-            height: 5vh;
+            height: 4vh;
         }
 
         input,
@@ -57,8 +58,13 @@
             font-size: conf.fontSize(font-body);
             font-family: conf.fontFamily(khmer);
             padding: 1rem;
-            border-radius: 0.4rem;
+            border-radius: 0.3rem;
             border: 1.5px solid var(--acent-color);
+            resize: none;
+            color:var(--secondary-color);
+            &:focus{
+                outline: 2px var(--acent-color) solid;
+            }
         }
 
         .submit {
@@ -67,7 +73,7 @@
             color: var(--white);
             font-family: conf.fontFamily(khmer);
             background-color: var(--acent-color);
-            border-radius: 0.4rem;
+            border-radius: 0.3rem;
             width: 30%;
             padding: 0.7rem 0.7rem;
         }
