Update:  Agrandar home (movil)

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -5,7 +5,7 @@
   --secondary-light-color: #37396D;
   --secondary-dark-color: #585858;
   --acent-color: #29D7CC;
-  --acent-hover-color: #ff74d8;
+  --acent-hover-color: #21b0a6;
   --white: #fff;
   --dialog-color: #B4B4B4;
 }
