--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,6 +1,7 @@
 :root {
     --primary-color: #FF2AC3;
     --primary-dark-color: #ca1f9a;
+    --primary-active-color: #7b135d;
     --secondary-color: #2D2F5E;
     --secondary-light-color: #37396D;
     --secondary-dark-color: #585858;
