--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -5,7 +5,7 @@ header {
     z-index: 2;
     width: 100%;
 
-    .nav {
+    nav {
         visibility: hidden;
         position: absolute;
         width: 100vw;
@@ -14,73 +14,74 @@ header {
         z-index: 3;
 
         display: flex;
-        flex-direction: column;
         justify-content: center;
-        font-size: 1.2rem;
-        padding-left: 2em;
-        gap: calc(1em + 2vw);
+        align-items: center;
+        text-align: center;
 
-        h1 {
-            width: 67%;
+        ul{
+            display: flex;
+            flex-direction: column;
+            gap: 1.5rem;
 
-            &:hover {
-                border-bottom: 5px solid var(--primary-color);
-
-            }
-
-            &:active {
-                color: var(--primary-dark-color);
+            li {
+                padding: 0 15px 0 15px;
+                font-size: 3rem;
+                list-style: none;
+                background-color: var(--primary-color);
+                border-radius: 0.3rem;
+                &:active {
+                    background-color: var(--primary-active-color);
+                }
             }
         }
+        
     }
 
-    .nav.show {
+    nav.show {
         visibility: visible;
     }
-}
-
-.container-header {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-
-    .logo {
-        width: calc(3em + 6vw);
-        margin-left: 1em;
-    }
-
-    .menu {
-
+    .container-header {
         display: flex;
-        flex-direction: column;
-        gap: calc(0.3em + 0.8vw);
-        margin-right: 1em;
-        z-index: 4;
-
-        span {
-            transition: all .2s linear;
-            transform-origin: 4px 0px;
-            border-radius: 0.5em;
-            width: calc(2em + 3vw);
-            height: calc(0.2em + 0.1vw);
-            background-color: var(--primary-color);
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+    
+        .logo {
+            width: calc(3em + 6vw);
+            margin-left: 1em;
         }
-
-        &.close span {
-            opacity: 1;
-            transform: rotate(35deg) translate(0px, 0px);
-            background: var(--acent-color);
+    
+        .menu {
+    
+            display: flex;
+            flex-direction: column;
+            gap: calc(0.3em + 0.8vw);
+            margin-right: 1em;
+            z-index: 4;
+    
+            span {
+                transition: 0.5s;
+                border-radius: 0.5em;
+                width: calc(2em + 3vw);
+                height: calc(0.2em + 0.1vw);
+                background-color: var(--primary-color);
+            }
+    
+            &.close span {
+                opacity: 1;
+                transform: rotate(45deg) translate(5px, 5px);
+                background: var(--acent-color);
+            }
+    
+            &.close span:nth-child(2) {
+                transform: rotate(-45deg) translate(5px, -5px);
+            }
+    
+            &.close span:nth-child(3) {
+                display: none;
+            }
         }
-
-        &.close span:nth-child(2) {
-            transform: rotate(-35deg) translate(-5px, 8px);
-        }
-
-        &.close span:nth-child(3) {
-            display: none;
-        }
+    
     }
-
 
 }
