--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,6 +1,7 @@
 :root {
   --primary-color: #FF2AC3;
   --primary-dark-color: #ca1f9a;
+  --primary-active-color: #7b135d;
   --secondary-color: #2D2F5E;
   --secondary-light-color: #37396D;
   --secondary-dark-color: #585858;
@@ -15,7 +16,7 @@ header {
   z-index: 2;
   width: 100%;
 }
-header .nav {
+header nav {
   visibility: hidden;
   position: absolute;
   width: 100vw;
@@ -23,59 +24,61 @@ header .nav {
   background-color: var(--secondary-color);
   z-index: 3;
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  font-size: 1.2rem;
-  padding-left: 2em;
-  gap: calc(1em + 2vw);
+  align-items: center;
+  text-align: center;
 }
-header .nav h1 {
-  width: 67%;
+header nav ul {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
 }
-header .nav h1:hover {
-  border-bottom: 5px solid var(--primary-color);
+header nav ul li {
+  padding: 0 15px 0 15px;
+  font-size: 3rem;
+  list-style: none;
+  background-color: var(--primary-color);
+  border-radius: 0.3rem;
 }
-header .nav h1:active {
-  color: var(--primary-dark-color);
+header nav ul li:active {
+  background-color: var(--primary-active-color);
 }
-header .nav.show {
+header nav.show {
   visibility: visible;
 }
-
-.container-header {
+header .container-header {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
 }
-.container-header .logo {
+header .container-header .logo {
   width: calc(3em + 6vw);
   margin-left: 1em;
 }
-.container-header .menu {
+header .container-header .menu {
   display: flex;
   flex-direction: column;
   gap: calc(0.3em + 0.8vw);
   margin-right: 1em;
   z-index: 4;
 }
-.container-header .menu span {
-  transition: all 0.2s linear;
-  transform-origin: 4px 0px;
+header .container-header .menu span {
+  transition: 0.5s;
   border-radius: 0.5em;
   width: calc(2em + 3vw);
   height: calc(0.2em + 0.1vw);
   background-color: var(--primary-color);
 }
-.container-header .menu.close span {
+header .container-header .menu.close span {
   opacity: 1;
-  transform: rotate(35deg) translate(0px, 0px);
+  transform: rotate(45deg) translate(5px, 5px);
   background: var(--acent-color);
 }
-.container-header .menu.close span:nth-child(2) {
-  transform: rotate(-35deg) translate(-5px, 8px);
+header .container-header .menu.close span:nth-child(2) {
+  transform: rotate(-45deg) translate(5px, -5px);
 }
-.container-header .menu.close span:nth-child(3) {
+header .container-header .menu.close span:nth-child(3) {
   display: none;
 }
 
