--- a/scss/tablet.scss
+++ b/scss/tablet.scss
@@ -1,243 +1,49 @@
 @use "config" as conf;
 
 
-/* //HOME
-.home {
-        
-    .arrow{ margin-top: 30em; }
-    h1{ font-size: 30vw; }
-    p{ margin-top: 12em; }
-    .b-h1 {
-        width: 46vw;
-        height: 90vh;
-    }
+.about {
+    grid-template-columns: 100px 1fr 100px;
+    grid-template-rows: 130px repeat(5, 1fr);
 }
 
-//HEADER
-header {
-    .nav{
-        gap: 1em;
-        font-size: 2vw;
-
-        h1{
-            width: 25%;
-            height: 85px;
-            &:hover{
-                border-bottom: 10px solid var(--primary-color);;
-                
-            }
-        }
-    }
-}
-.container-header{
-    gap: 73vw;
-
-    .logo{
-        margin-left: 1.5em;
-    }
-    .menu{
-        
-        &.close span:nth-child(2){
-            transform: rotate(-35deg) translate(-12px, 11px);
-        }
-        
-    }
-}
-
-//PAGINATION
-.swiper-pagination{
-    left: 2%; 
-    margin-top: 28vw; 
-    
-    .swiper-pagination-bullet {
-        width: 2.3vw;
-        height: 3vh;
-    }
-}
-
-//ABOUT
-.about{
-
-    grid-template-rows: 150px repeat(6,1fr);
-
-    .p-about{
-        grid-column: 1 / 2;
-        grid-row: 3 / 5;
-        justify-self: end;
-    }
-
-    .card-profile{
-        grid-column: 2 / 3;
-        grid-row: 2 / 5; 
-
-        .p-animation{
-            display: inline;
-            background-color: #B4B4B4;
-            text-align: center;
-            width: 70%;
-            padding: 0.4em;
-            border-radius: 0.5em;
-            font-size: calc(0.7em + 1vw);
-            color: var(--primary-color);
-            z-index: 5;
-            margin-right: 100%;
-            white-space: nowrap;
-            overflow: hidden;
-            animation: typewriter 1s steps(50) 1 normal both;
-        }
-
-
-        .b-img {
-            position: absolute;
-            display: block;
-            width: calc(6em + 28vw);
-            height: calc(7em + 28vw);
-            z-index: 0;
-        }
-
-        @keyframes typewriter {
-            from {
-              width: 0;
-            }
-            
-            to {
-              width: 75%;
-            }
-          }
-        
-    }
-}
-
-
-//SKILLS
 .skills {
+    grid-template-columns: 100px 1fr 100px;
+    grid-template-rows: 130px repeat(7, 1fr);
 
-    grid-template-rows: 150px 100px 100px 170px repeat(2,1fr);
-    grid-template-columns: 1fr 50px 1fr;
-
-    img{
-        grid-column: 3 / 4;
-        grid-row: 2 / 6;
-        align-self: center;
-        margin: 0;
-    }
-
-    .p-skills{
-        grid-column: 1 / 2;
-        grid-row: 3 / 4;
-        width: 70%;
-        margin-left: 3.6em;
-        align-self: end;
-    }
-
-    .interests{
-        display: block;
-        grid-column: 1 / 2;
-        grid-row: 4 / 5;
-        margin-top: 2em;
-        display: flex;
-        flex-direction: column;
-        gap: 15px;
-        font-size: 1.3vw;
-        font-family: conf.fontFamily(khmer);
-        background-color: #21B1A7;
-        border-radius: 10px;
-        margin-left: 3.6em;
-        width: 70%;
-        padding: 1em 1em 1em 1em;
-        .p-interests{
-            display: flex;
-            flex-direction: column;
-            gap: 0.4em;
-        }
-        
+    img {
+        justify-self: start;
+        width: 80%;
     }
 
 }
 
-//PROJECTS
 .projects {
-    grid-template-rows: 150px repeat(6,1fr);
+    grid-template-columns: 100px 1fr 100px;
+    grid-template-rows: 130px repeat(7, 1fr);
 
     .swiper-projects {
-        grid-row: 3 / 5;
-        margin-top: 6em;
-        max-width: 350px;
-
         .swiper-slide {
-            min-height: 200px;
-            
-          }
-                 
-          
-      }
-    
+            min-height: 300px;
+        }
+    }
+
 }
 
-//CONTACT
 .contact {
-    grid-template-rows: 150px repeat(6,1fr);
-
-    .p-contact {
-        grid-column: 1 / 2;
-        grid-row: 3 / 4;
-        width: 80%;
-        justify-self: flex-end;
-        margin-top: 2vw;
-    }
-
-    img{
-        display: block;
-        position: absolute;
-        top: 23%;
-        right: 1%;
-        width: 57vw;
-        height: 68vh;
-        z-index: -1;
-    }
-
+    grid-template-columns: 100px repeat(2, 1fr);
+    grid-template-rows: 130px repeat(6, 1fr);
 
     form {
-        width: 75%;
-        grid-column: 2 / 3;
-        grid-row: 3 / 7;
+        gap: .5em;
 
-        gap: 0.8em;
-        z-index: 4;
+        textarea {
+            height: 10em;
+        }
 
         label {
-            gap: 0.7em;
+            gap: .5em;
         }
 
 
-        input.subject{
-            height: 7vh;
-
-        }
-
-        input.email{
-            height: 7vh;
-        }
-
-        input.name{
-            height: 7vh;
-        }
-
-        .submit {
-            height: 8vh;
-        }
-        
     }
-
-
-    .credits {
-        grid-column: 1 / 2;
-        grid-row: 6 / span 7;
-        justify-self: flex-end;
-        width: 80%;
-        span {
-            
-            width: 23vw;
-        }
-    }
-} */
+}
